# rustCrates

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  cryptocurrency_rates_history.json  feedforward_network.json  space.yaml
.ipynb_checkpoints/: Cargo-checkpoint.toml  build-checkpoint.rs
STORAGE/: transformer_01.04.2025
STORAGE/SLED_EMBEDDING/: db  snap.00000000036F5ABF  snap.00000000036F7320  snap.0000000003832D30  snap.0000000003834B50  snap.0000000003858740  snap.0000000003B1AE79  snap.0000000003C4926D  snap.0000000003D2E594  snap.00000000050F6FF1  snap.000000000561B6E1  snap.0000000005FDC814  snap.000000000826621E  snap.00000000095013D3  snap.000000000A2AD347  snap.000000000C607ECE  snap.000000000C7A4B24  snap.000000000E104D49  snap.000000000E61E3D2  snap.000000000E9763EA  snap.000000000EC3B2EC  snap.000000000FFDC32C  snap.000000001225D8B4  snap.0000000012843B4B  snap.000000004AC96312  snap.000000004C16C694  snap.000000016BBFE333  snap.0000000182156A21  snap.00000001D4B7DFC7
STORAGE/SLED_TOKENIZER/: db
STORAGE/embedding/: embedding_layer.json
backup/: cryptocurrency_rates_history_2021-3-20-19-21.json  cryptocurrency_rates_history_2021-3-20-19-24.json  cryptocurrency_rates_history_2021-3-20-19-28.json  cryptocurrency_rates_history_2021-3-20-22-28.json  cryptocurrency_rates_history_2021-3-22-10-2.json  cryptocurrency_rates_history_2021-3-22-13-2.json  cryptocurrency_rates_history_2021-3-22-16-2.json  cryptocurrency_rates_history_2021-3-22-19-2.json  cryptocurrency_rates_history_2021-3-22-22-2.json  cryptocurrency_rates_history_2021-3-22-7-2.json  cryptocurrency_rates_history_2021-3-23-10-4.json  cryptocurrency_rates_history_2021-3-23-13-4.json  cryptocurrency_rates_history_2021-3-23-16-4.json  cryptocurrency_rates_history_2021-3-23-19-4.json  cryptocurrency_rates_history_2021-3-23-7-4.json  cryptocurrency_rates_history_2021-3-24-10-5.json  cryptocurrency_rates_history_2021-3-24-13-5.json  cryptocurrency_rates_history_2021-3-24-16-5.json  cryptocurrency_rates_history_2021-3-24-19-5.json  cryptocurrency_rates_history_2021-3-24-22-5.json  cryptocurrency_rates_history_2021-3-24-7-5.json  cryptocurrency_rates_history_2021-3-25-10-3.json  cryptocurrency_rates_history_2021-3-25-13-3.json  cryptocurrency_rates_history_2021-3-25-16-3.json  cryptocurrency_rates_history_2021-3-25-19-3.json  cryptocurrency_rates_history_2021-3-25-7-3.json  cryptocurrency_rates_history_2021-3-26-10-5.json  cryptocurrency_rates_history_2021-3-26-13-5.json  cryptocurrency_rates_history_2021-3-26-16-5.json  cryptocurrency_rates_history_2021-3-26-19-5.json  cryptocurrency_rates_history_2021-3-26-22-5.json  cryptocurrency_rates_history_2021-3-26-7-5.json  cryptocurrency_rates_history_2021-4-1-11-47.json  cryptocurrency_rates_history_2021-4-1-14-49.json  cryptocurrency_rates_history_2021-4-1-17-49.json  cryptocurrency_rates_history_2021-4-1-20-49.json  cryptocurrency_rates_history_2021-4-10-12-58.json  cryptocurrency_rates_history_2021-4-10-16-0.json  cryptocurrency_rates_history_2021-4-10-16-12.json  cryptocurrency_rates_history_2021-4-10-16-37.json  (+59 more)
cryto_predictions_python/: discrete_wavelets.py  expecation_maximization_1d.py  expectation_maximization.py  feedforward-prediction.py  fft.py  kullback-leibler.py  lsfm-conv.py  lstm-conv-dense.py  lstm-conv.py  lstm.py  mexican_hat_wavelet.py  neural_network.py  prophet.py  stocker-model.py  stocker.py  test_neural_network_rust.py  time_series_prediction.py  tokenization_bert.py  variational_inference.py  variational_inference_v2.py  word_embedding_bert.py
datasets/: NVDA_historical_data.json
documentation/: build.txt  docker  gauss.txt  mexican_hat.txt  openblas.txt  pixel_to_rgba.txt  python.txt  sampling_methods.txt  training.txt  transformer.txt
src/: lib.rs  main.rs  train_nn.py
src/database/: crud_service.rs  mod.rs  sled_config.rs  sled_db.rs  tests.rs
src/mouse_clicks/: click_events.rs  mod.rs
src/neural_networks/: feedforward-prediction.py  lib.rs  lstm-2.py  lstm-conv-bidirectional-normalized.py  lstm-conv-bidirectional.py  lstm.py  mod.rs  neural_network.py  positional encoding.py  prophet.py
src/python_bindings/: mod.rs  python_lib.rs
src/stock_predictions/: mod.rs  momentum.rs  monte_carlo_simulation.rs  refresh_data.rs  stock_apis.rs  stock_ticker_symbols.rs
src/tcp/: mod.rs  tcp_client.rs  tcp_server.rs  tcp_stream_actions.rs
src/udp/: mod.rs  udp_client.rs  udp_server.rs
src/uphold_api/: collect_data_task.rs  crypto_predictions.rs  cryptocurrency_api.rs  cryptocurrency_dto.rs  data_structure.rs  file_utils.rs  mod.rs
src/utils/: array.rs  array_complex.rs  array_operations.rs  data_converter.rs  (+8 more)
templates/: index.html
(+104 files in other folders)
