[package]
name = "rust_main_project"
version = "0.1.0"
authors = ["Rodion Kovalenko <rodion.kovalenko@npo-applications.de>"]
edition = "2018"
build = "build.rs"

[lib]
name = "neural_networks"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3"
rand="0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.140"
num = "0.4"
num-complex = { version = "0.4", features = ["serde"] }
enigo = "0.3.0"
webbrowser = "1.0.4"
url = "2.2.1"
curl = "*"
futures = "0.3.30"
hyper = "1.6.0"
tokio = { version = "1.44.1", features = ["full"] }
reqwest = "0.12.15"
error-chain = "0.12"
chrono = {version="0.4.40",features = ["serde"]}
num-traits = "0.2.14"
cast = "0.3.0"
image = "0.25.6"
serde-big-array = "0.5.1"
sled = "0.34" 
tokenizers = "0.21.1"
ndarray = "0.16.1"  # Use the latest version if available
plotters = "0.3"   #
yahoo_finance_api = "3.0.0"
time = "0.3.41"
csv = "1.1"
nalgebra = "0.33.2"
ndarray-rand = "0.15"
ndarray-linalg = "0.17" 
rayon = "1.5.1"
bincode = "1.3"
lazy_static = "1.4"
statrs = "0.18"
thiserror = "2.0.12"

[profile.release]
opt-level = 3 # Optimize for size "z", for speeed 3
lto = true     # Enable Link Time Optimization
codegen-units = 1 # Reduce the number of codegen units to improve optimization
